--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 必须赋予写权限，否则无法创建 Release
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,31 +21,25 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22' # 建议使用较新的 Go 版本
+          go-version: '1.22'
 
-      # --- 核心修改：新增数据处理步骤 ---
+      # --- 自定义规则处理步骤 ---
       - name: Prepare custom rules
         run: |
-          # 1. 创建数据目录（如果不存在）
           mkdir -p data
-          
-          # 2. 下载并清洗数据
-          # grep 筛选以 0.0.0.0 开头的行
-          # awk 提取第二列（域名）
-          # 输出到 data/heidai 文件中，这样编译后的 tag 就是 "geosite:heidai"
           echo "Downloading and processing heidai rules..."
           curl -sL https://raw.githubusercontent.com/217heidai/adblockfilters/main/rules/adblockhosts.txt | \
           grep "^0.0.0.0" | \
           awk '{print $2}' > data/heidai
-          
-          # 3. 打印一下行数验证是否成功
           echo "Extracted $(wc -l < data/heidai) rules to data/heidai"
 
       - name: Build geosite
         id: build
         run: |
-          # 编译命令（sing-geosite 默认会扫描 data 目录并将其打包进 db）
           go run -v .
+          # 注意：你的 Go 代码必须向 $GITHUB_OUTPUT 写入 tag，
+          # 例如：echo "tag=20240101" >> $GITHUB_OUTPUT
+          # 如果你的 go 代码没有输出 tag，下面的 release 步骤可能会因为找不到 tag 而失败。
 
       - name: Generate sha256 hash
         if: steps.build.outputs.skip != 'true'
@@ -58,9 +55,8 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git fetch
           
-          # 切换到 release 分支，如果不存在则处理
+          # 切换或创建 release 分支
           git checkout release || git checkout -b release
-          # 使用 orphan 分支清理历史（保持原逻辑）
           git checkout --orphan release-orphan
           git rm -rf .
           
@@ -70,7 +66,7 @@ jobs:
           
           git commit -am "Updated at $(date)"
           
-          # 强制替换 release 分支
+          # 强制更新 release 分支
           git branch -D release || true
           git branch -m release
 
@@ -85,41 +81,20 @@ jobs:
       - name: Purge CDN Cache
         if: steps.build.outputs.skip != 'true'
         run: |
-          # 这里的 URL 用户名 "soffchen" 可能需要根据你实际的 GitHub 用户名修改
-          # 建议使用 ${{ github.repository }} 动态获取
-          curl -L https://purge.jsdelivr.net/gh/${{ github.repository }}@release/geosite.db > /dev/null 2>&1
-          curl -L https://purge.jsdelivr.net/gh/${{ github.repository }}@release/geosite.db.sha256sum > /dev/null 2>&1
+          # 自动获取当前仓库名称，格式为 "用户名/仓库名"
+          REPO_NAME="${{ github.repository }}"
+          curl -L "https://purge.jsdelivr.net/gh/${REPO_NAME}@release/geosite.db" > /dev/null 2>&1
+          curl -L "https://purge.jsdelivr.net/gh/${REPO_NAME}@release/geosite.db.sha256sum" > /dev/null 2>&1
 
-      - name: Create a release
+      # --- 核心修复：使用新的 Action 发布 Release ---
+      - name: Release and Upload Assets
         if: steps.build.outputs.skip != 'true'
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.build.outputs.tag }}
-          release_name: ${{ steps.build.outputs.tag }}
-          draft: false
-          prerelease: false
-
-      - name: Release geosite.db
-        if: steps.build.outputs.skip != 'true'
-        uses: actions/upload-release-asset@v1
+          name: ${{ steps.build.outputs.tag }}
+          files: |
+            geosite.db
+            geosite.db.sha256sum
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./geosite.db
-          asset_name: geosite.db
-          asset_content_type: application/octet-stream
-
-      - name: Release geosite.db sha256sum
-        if: steps.build.outputs.skip != 'true'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./geosite.db.sha256sum
-          asset_name: geosite.db.sha256sum
-          asset_content_type: text/plain
